changed a few CSS items

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,8 +1,9 @@
-<li class="first" >
+<div class="posts">
+    <li class="first" >
 
-    <p>{{ post.title }}</p>
+    <p class="postTitle">{{ post.title }}</p>
     <p>{{ post.thought }}</p>
 
     <button class="deleteThought" (click)="deletePost()">Delete Post</button>
-
-</li>
+    </li>
+</div>
